# hsr_sim_common

./: CMakeLists.txt  README.en.md  README.md  install.sh  package.xml
example/: grasp.py
hsr_description/: CMakeLists.txt  README.md
hsr_description/launch/: display.launch  display.rviz
hsr_description/robots/: hsrb4s.urdf
hsr_meshes/: README.md
hsr_ros/: CMakeLists.txt  README.txt  install.sh  package.xml  地図生成.txt~
hsr_ros/example/: grasp.py
hsr_ros/launch/: create_location_file.launch  generate_pointcloud.launch  mapping.launch  minimal.launch  sigverse.launch  slam.launch
hsr_ros/launch/includes/: move_base.launch.xml
hsr_ros/map/: map.pgm
hsr_ros/msg/: location_stock.msg
hsr_ros/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  waypoint_nav.yaml
hsr_ros/src/: grasp_obj_by_frame_hsr.py  handyman_pose_saver.cpp  hsr_controller.py  joint_controller.py  odom_base_controller.py  pointing.py  pose_saver_tf.cpp  potential.py  sub_depth.py  sub_obj_depth.cpp  test_grasp.py  tf_time_change.py  waypoint_nav.cpp
hsr_ros/srv/: arm_height.srv  gripper_ctrl.srv  gripper_move.srv  object_depth.srv  robot_motion.srv
launch/: create_location_file.launch  hsr_openni2.launch  mapping.launch  minimal.launch  slam.launch
launch/includes/: amcl.launch.xml  gmapping.launch.xml  move_base.launch.xml
param/: costmap_common_params.yaml  global_costmap_params.yaml  waypoint_nav.yaml
src/: grasp_obj_by_frame_hsr.py  handyman_pose_saver.cpp  joint_controller.py  odom_base_controller.py  pcl_scan_creater.cpp  pointing.py  pose_saver.cpp  sub_obj_depth.cpp  test_grasp.py  tf_time_change.py  waypoint_nav.cpp
srv/: arm_height.srv  detect_ctrl.srv  grasp_ctrl.srv  gripper_ctrl.srv  is_grasped.srv  obj_depth.srv  put_ctrl.srv  watch_motion.srv  waypoint_nav.srv
